# voiceboard

./: README.md  pyproject.toml  ux
db/: chroma.sqlite3
src/voiceboard/: crew.py  main.py
src/voiceboard/config/: agents.yaml  tasks.yaml
