[project]
name = "voiceboard"
version = "0.1.0"
description = "voiceboard using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
]

[project.scripts]
voiceboard = "voiceboard.main:run"
run_crew = "voiceboard.main:run"
train = "voiceboard.main:train"
replay = "voiceboard.main:replay"
test = "voiceboard.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
